--- a/fly.toml
+++ b/fly.toml
@@ -1,13 +1,15 @@
-# fly.toml app configuration file generated for imageconverter-shy-pond-8245 on 2024-12-10T20:35:51-05:00
+# fly.toml app configuration file generated for imageconverter-hidden-bird-6277 on 2024-12-10T21:09:43-05:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'imageconverter-shy-pond-8245'
+app = 'imageconverter-hidden-bird-6277'
 primary_region = 'mia'
 
+[build]
+
 [http_service]
-  internal_port = 8080
+  internal_port = 3000
   force_https = true
   auto_stop_machines = 'stop'
   auto_start_machines = true
