--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "backend",
+  "name": "server",
+  "private": true,
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
     "dev": "nodemon src/server.ts",
     "dev:backend": "nodemon src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.1",
